--- a/app/src/main/res/layout/slider.xml
+++ b/app/src/main/res/layout/slider.xml
@@ -12,17 +12,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
-        android:id="@+id/cursorLayout"
+    <com.imageSliderComponent.components.SliderCursor
+        android:id="@+id/sliderCursor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:gravity="center"
-        android:orientation="horizontal"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/viewPager" />
+        app:layout_constraintTop_toBottomOf="@id/viewPager" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
