package name changed and autoPlay bug fixed

--- a/app/src/main/res/layout/slider.xml
+++ b/app/src/main/res/layout/slider.xml
@@ -12,7 +12,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.imageSliderComponent.components.SliderCursor
+    <com.customViewSlider.components.SliderCursor
         android:id="@+id/sliderCursor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
