--- a/app/src/main/res/layout/item_slider_image.xml
+++ b/app/src/main/res/layout/item_slider_image.xml
@@ -23,8 +23,8 @@
         android:gravity="center_vertical"
         android:textColor="@android:color/white"
         android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imgBackground"
+        app:layout_constraintBottom_toBottomOf="@id/imgBackground"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imgBackground" />
+        app:layout_constraintTop_toTopOf="@id/imgBackground" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
